# flow-with-duckdb

./: .gitignore  Makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
dashboard/: package-lock.json
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: index.md
dashboard/sources/pypi_metrics/: connection.yaml  weekly_download.sql
ingestion/: bigquery.py  duck.py  models.py  pipeline.py
tests/ingestion/: sample_file_downloads.csv  test_models.py
transform/pypi_metrics/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transform/pypi_metrics/macros/: export_partition_data.sql
transform/pypi_metrics/models/: pypi_daily_stats.sql  sources.yml
